simple commands: update padding to correct spacing to line-height

--- a/src/public/assets/rocket/css/rocket-20.css
+++ b/src/public/assets/rocket/css/rocket-20.css
@@ -5563,7 +5563,7 @@ td .rocket-impl-translation > .rocket-control:not(:empty) {
 }
 
 .rocket-impl-entry > .rocket-impl-summary > .rocket-simple-commands {
-  padding: 0.75rem 0.75rem 0.75rem 0;
+  padding: 0.62rem 0.75rem 0.62rem 0;
   text-align: right;
 }
 
