--- a/src/public/assets/rocket/theme-20/_entry.scss
+++ b/src/public/assets/rocket/theme-20/_entry.scss
@@ -138,7 +138,7 @@
         }
 
         > .rocket-simple-commands {
-            padding: 0.75rem 0.75rem 0.75rem 0;
+            padding: 0.62rem 0.75rem 0.62rem 0;
             text-align: right;
         }
 
